Toques finales al index, hormigon, herreria, techos y pintura

--- a/herreria.html
+++ b/herreria.html
@@ -189,101 +189,98 @@
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
 
     <main>
-        <div class="container">
+        <h1 class="centrado mrt30">Herrería</h1>
 
 
-            <!-- Presentación -->
-            <h1 class="centrado mrt30">Herrería</h1>
+        <!-- Presentación -->
+        <div class="w-100">
+            <div class="cont-presentacion">
 
-            <!-- Imagen Principal -->
-            <div class="centrado mrt30">
-                <img class="img-principal" src="/img/solador.jpg" alt="img-principal">
+                <!-- Imagen Principal -->
+                <div class="centrado mrt30">
+                    <img class="img-principal" src="/img/solador.jpg" alt="img-principal">
+                </div>
+                <!-- Fin Imagen Principal -->
+
+
+
+
+                <div class="presentacion mrt30">
+                    <h5 class="text-indent justify">En <b>LFConstrucciones</b>, contamos con personal especializado en
+                        corte y plegado de chapas y acero inoxidable.</h5>
+                    <br>
+                    <h5 class="text-indent justify">Relizamos <b>Portones, Rejas, Escaleras, Pérgolas, Parrillas,
+                            Puertas de Parrilas, Cestos de Basura</b> y todo tipo de trabajos realizados tanto en
+                        chapas o acero inoxidable.</h5>
+                    <br>
+                    <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materias
+                        primas de
+                        alta calidad nos permiten ofrecer un servicio superior, garantizando los más altos
+                        estándares de
+                        calidad.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Ante cualquier duda y/o consulta no dude en
+                            contactarnos.</b>
+                    </h5>
+                </div>
             </div>
-            <!-- Fin Imagen Principal -->
+            <!-- Fin Presentación -->
 
-            <h2 class="centrado mrt30">Trabajamos con diseño propio y Garantía Escrita</h2>
-
-            <div class="centrado mrt30">
+            <div class="centrado mr30">
                 <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
                         alt="whatsapp"><b>CONTACTANOS</b></a>
             </div>
 
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
-                    ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
-                    equipo de profesionales altamente capacitados y experimentados está preparado para abordar cualquier
-                    situación con respuestas rápidas y eficientes.</h4>
-            </div>
-            <!-- Fin Presentación -->
+            <div class="container mrt30">
 
-            <div class="contenedor-cards">
-                <div class="centrado cards">
-                    <div class="" id="portones">
-                        <div class="mr10">
+                <!-- Cards -->
+                <div class="contenedor-cards">
+
+                    <div class="centrado cards">
+                        <div class="mr10" id="portones">
                             <img class="img-tarjetas mrt10" src="/img/herreria/portones.png" alt="portones">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="rejas">
-                        <div class="mr10">
+                        <div class="mr10" id="rejas">
                             <img class="img-tarjetas mrt10" src="/img/herreria/rejas.png" alt="rejas">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="escaleras">
-                        <div class="mr10">
+                        <div class="mr10" id="escaleras">
                             <img class="img-tarjetas" src="/img/herreria/escaleras.png" alt="escalera">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="pergolas">
-                        <div class="mr10">
+
+                        <div class="mr10" id="pergolas">
                             <img class="img-tarjetas" src="/img/herreria/pergolas.png" alt="pergolas">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="parrillas">
-                        <div class="mr10">
+                        <div class="mr10" id="parrillas">
                             <img class="img-tarjetas" src="/img/herreria/parrilla.png" alt="parrilla">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="puerta-parrilla">
-                        <div class="mr10">
+                        <div class="mr10" id="puerta-parrilla">
                             <img class="img-tarjetas" src="/img/herreria/tapa-parrilla.png" alt="tapa-parrilla">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="cestos">
-                        <div class="mr10">
+                        <div class="mr10" id="cestos">
                             <img class="img-tarjetas" src="/img/herreria/cesto-basura.png" alt="cesto">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Fin Cards -->
+
+                <div class="centrado mrt30">
+                    <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
+                            alt="whatsapp"><b>PEDIR
+                            PRESUPUESTO</b></a>
+                </div>
+
+                <div class="presentacion mrt30">
+                    <h5 class="text-indent justify">Nos especializamos en hacer realidad tus proyectos de herrería,
+                        brindándote soluciones integrales y de calidad.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Solicite presupuesto Sin Cargo.</b> Estamos para ayudarlo con
+                        cualquier duda y/o consulta que tenga.</h5>
+                </div>
+
             </div>
-
-            <!-- Fin Cards -->
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">En <b>LFConstrucciones</b>, realizamos servicios para empresas y
-                    particulares. Estamos capacitados para brindar soluciones eficaces y de alta calidad. Años de
-                    experiencia nos avalan. </h4>
-            </div>
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">Trabajamos con diseño propio y <b>Garantía Escrita.</b> Solicité
-                    presupuesto <b>Sin Cargo.</b> Estamos para ayudarlo con cualquier duda y/o consulta que tenga.</h4>
-            </div>
-
         </div>
+
     </main>
 
     <!-- <<< ----------- * ----------- Fin Main ----------- * ----------- >>> -->
