--- a/hormigon.html
+++ b/hormigon.html
@@ -189,96 +189,70 @@
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
 
     <main>
-        <div class="container">
+        <h1 class="centrado mrt30">Hormigón Armado</h1>
 
+        <!-- Presentación -->
+        <div class="w-100">
+            <div class="cont-presentacion">
 
-            <!-- Presentación -->
-            <h1 class="centrado mrt30">Hormigón Armado</h1>
+                <!-- Imagen Principal -->
+                <div class="cont-img-principal mrt30">
+                    <img class="img-principal" src="/img/hormigon.jpg" alt="img-principal">
+                </div>
+                <!-- Fin Imagen Principal -->
 
-            <!-- Imagen Principal -->
-            <div class="centrado mrt30">
-                <img class="img-principal" src="/img/hormigon.jpg" alt="img-principal">
+                <div class="presentacion mrt30">
+                    <h5 class="text-indent justify">En <b>LFConstrucciones</b>, nos especializamos en,
+                        hormigones y morteros. Con más de 10 años de experiencia, utilizamos equipamiento de
+                        última generación.</h5>
+                    <br>
+                    <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materias primas de
+                        alta calidad nos permiten ofrecer producto superior, garantizando los más altos estándares de
+                        calidad
+                        y servicio.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Ante cualquier duda y/o consulta no dude en contactarnos.</b>
+                    </h5>
+                </div>
             </div>
-            <!-- Fin Imagen Principal -->
+            <!-- Fin Presentación -->
 
-            <h2 class="centrado mrt30">Trabajamos con diseño propio y Garantía Escrita</h2>
-
-            <div class="centrado mrt30">
+            <div class="centrado mr50">
                 <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
                         alt="whatsapp"><b>CONTACTANOS</b></a>
             </div>
 
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
-                    ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
-                    equipo de profesionales altamente capacitados y experimentados está preparado para abordar cualquier
-                    situación con respuestas rápidas y eficientes.</h4>
-            </div>
-            <!-- Fin Presentación -->
+            <div class="container mrt30">
 
-            <div class="contenedor-cards">
-                <div class="centrado cards">
-                    <div class="" id="losas">
-                        <div class="mr10">
+                <!-- Cards -->
+                <div class="contenedor-cards">
+                    <div class="centrado cards">
+                        <div class="mr10" id="losas">
                             <img class="img-tarjetas mrt10" src="/img/hormigon/losas.png" alt="losas">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="encadenado">
-                        <div class="mr10">
+                        <div class="mr10" id="encadenado">
                             <img class="img-tarjetas mrt10" src="/img/hormigon/encadenados.png" alt="encadenado">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="vigas">
-                        <div class="mr10">
+                        <div class="mr10" id="vigas">
                             <img class="img-tarjetas" src="/img/hormigon/vigas.png" alt="vigas">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="columnas">
-                        <div class="mr10">
+                        <div class="mr10" id="columnas">
                             <img class="img-tarjetas" src="/img/hormigon/columnas.png" alt="columnas">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="viguetas">
-                        <div class="mr10">
+                        <div class="mr10" id="viguetas">
                             <img class="img-tarjetas" src="/img/hormigon/viguetas.png" alt="viguetas">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="escaleras">
-                        <div class="mr10">
+                        <div class="mr10" id="escaleras">
                             <img class="img-tarjetas" src="/img/hormigon/escaleras.png" alt="escalera">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="tabiques">
-                        <div class="mr10">
+                        <div class="mr10" id="tabiques">
                             <img class="img-tarjetas" src="/img/hormigon/tabiques.png" alt="tabiques">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="troncos">
-                        <div class="mr10">
+                        <div class="mr10" id="troncos">
                             <img class="img-tarjetas" src="/img/hormigon/troncos.png" alt="troncos">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="zapatas">
-                        <div class="mr10">
+                        <div class="mr10" id="zapatas">
                             <img class="img-tarjetas" src="/img/hormigon/zapatas.png" alt="zapatas">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
                 </div>
@@ -286,15 +260,17 @@
 
             <!-- Fin Cards -->
 
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">En <b>LFConstrucciones</b>, realizamos servicios para empresas y
-                    particulares. Estamos capacitados para brindar soluciones eficaces y de alta calidad. Años de
-                    experiencia nos avalan. </h4>
+            <div class="centrado mrt30">
+                <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png" alt="whatsapp"><b>PEDIR
+                        PRESUPUESTO</b></a>
             </div>
 
             <div class="presentacion mrt30">
-                <h5 class="text-indent justify">Trabajamos con diseño propio y <b>Garantía Escrita.</b> Solicité
-                    presupuesto <b>Sin Cargo.</b> Estamos para ayudarlo con cualquier duda y/o consulta que tenga.</h4>
+                <h5 class="text-indent justify">Nos especializamos en hacer realidad tus proyectos de construcción,
+                    brindándote soluciones integrales y de calidad.</h5>
+                <br>
+                <h5 class="text-indent justify"><b>Solicite presupuesto Sin Cargo.</b> Estamos para ayudarlo con
+                    cualquier duda y/o consulta que tenga.</h5>
             </div>
 
         </div>
