--- a/index.html
+++ b/index.html
@@ -190,30 +190,45 @@
 
     <!-- <<< ----------- * ----------- Main ----------- * ----------- >>> -->
     <main>
+
+        <h1 class="centrado mrt30">LFConstrucciones Integrales</h1>
+
+        <!-- Presentación -->
+        <div class="w-100">
+            <div class="cont-presentacion">
+
+                <!-- Imagen Principal -->
+                <div class="cont-img-principal mrt30">
+                    <img class="img-principal" src="/img/planificacion.png" alt="img-principal">
+                </div>
+                <!-- Fin Imagen Principal -->
+
+                <div class="presentacion mrt30">
+                    <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante
+                        crecimiento,
+                        ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados.
+                        Nuestro
+                        equipo de profesionales altamente capacitados y experimentados está preparado para abordar
+                        cualquier situación con respuestas rápidas y eficientes.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Realizamos obras llave en mano</b> y todos los
+                        servicios derivados de la construcción como <b>Hormigón, Herrería, Techos, Pintura, Plomería
+                            y
+                            Electricidad.</b> Ofreciendo una respuesta rápida a sus necesicidades.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Ante cualquier duda y/o consulta no dude en contactarnos.</b>
+                    </h5>
+                </div>
+            </div>
+        </div>
+        <!-- Fin Presentación -->
+
+        <div class="centrado mrt30">
+            <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
+                    alt="whatsapp"><b>CONTACTANOS</b></a>
+        </div>
+
         <div class="container">
-
-            <!-- Presentación -->
-            <h1 class="centrado mrt30">LFConstrucciones Integrales</h1>
-
-            <!-- Imagen Principal -->
-            <div class="centrado mrt30">
-                <img class="img-principal" src="/img/planificacion.png" alt="img-principal">
-            </div>
-            <!-- Fin Imagen Principal -->
-
-            <div class="centrado mrt30">
-                <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
-                        alt="whatsapp"><b>CONTACTANOS</b></a>
-            </div>
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
-                    ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
-                    equipo de profesionales altamente capacitados y experimentados está preparado para abordar cualquier
-                    situación con respuestas rápidas y eficientes.</h4>
-            </div>
-            <!-- Fin Presentación -->
-
             <!-- Servicios -->
             <div class="mrt30">
                 <h2 class="centrado">Conocé nuestros servicios</h2>
@@ -248,24 +263,26 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- Fin Cards -->
 
-        <div class="centrado mrt30">
-            <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
-                    alt="whatsapp"><b>CONTACTANOS</b></a>
+            <!-- Fin Cards -->
+
+            <div class="centrado mrt30">
+                <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
+                        alt="whatsapp"><b>CONTACTANOS</b></a>
+            </div>
+            <!-- Fin Servicios -->
+
         </div>
-        <!-- Fin Servicios -->
     </main>
     <!-- <<< ----------- * ----------- Fin Main ----------- * ----------- >>> -->
 
     <!-- <<< ----------- * ----------- Footer ----------- * ----------- >>> -->
     <footer>
         <div class="footer mrt30">
-            <div class="mr20">
+            <div class="mr10">
                 <a href="#"><img class="logo-footer" src="/img/logo-ok.png" alt="logo"></a>
             </div>
-            <div class="text-footer mr20">
+            <div class="text-footer mr10">
                 <p>Las Amapolas 1923 - Tristan Suarez</p>
                 <p>Buenos Aires - Argentina</p>
                 <p>© Copyright 2024 - LFConstrucciones</p>
