--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -189,8 +189,9 @@
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
 
     <main>
-        <div class="container">
 
+
+        <div class="presentacion">
 
             <!-- Presentación -->
             <h1 class="centrado mrt30">Sobre Nosotros</h1>
@@ -201,18 +202,23 @@
             </div>
             <!-- Fin Imagen Principal -->
 
+            <div class="presentacion mrt30">
+                <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
+                    ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
+                    equipo de profesionales altamente capacitados y experimentados está preparado para abordar
+                    cualquier
+                    situación con respuestas rápidas y eficientes.</h4>
+            </div>
+
             <div class="centrado mrt30">
                 <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
                         alt="whatsapp"><b>CONTACTANOS</b></a>
             </div>
 
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
-                    ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
-                    equipo de profesionales altamente capacitados y experimentados está preparado para abordar cualquier
-                    situación con respuestas rápidas y eficientes.</h4>
-            </div>
-            <!-- Fin Presentación -->
+        </div>
+        <!-- Fin Presentación -->
+
+        <div class="container">
 
             <div class="presentacion mrt30">
                 <h5 class="text-indent justify">En <b>LFConstrucciones</b>, realizamos servicios para empresas y
