--- a/techos.html
+++ b/techos.html
@@ -189,64 +189,71 @@
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
 
     <main>
-        <div class="container">
+        <h1 class="centrado mrt30">Techos</h1>
 
-            <!-- Presentación -->
-            <h1 class="centrado mrt30">Techos</h1>
 
-            <!-- Imagen Principal -->
-            <div class="centrado mrt30">
-                <img class="img-principal" src="/img/techos.jpeg" alt="img-principal">
+        <!-- Presentación -->
+        <div class="w-100">
+            <div class="cont-presentacion">
+
+                <!-- Imagen Principal -->
+                <div class="centrado mrt30">
+                    <img class="img-principal" src="/img/techos.jpeg" alt="img-principal">
+                </div>
+                <!-- Fin Imagen Principal -->
+
+                <div class="presentacion mrt30">
+                    <h5 class="text-indent justify">En <b>LFConstrucciones</b>, contamos con personal altamente
+                        capacitado en la realización de techos tanto de chapa como techos de tejas. Contamos con más de
+                        10 años de experiencia en el rubro.</h5>
+                    <br>
+                    <h5 class="text-indent justify">Nuestro equipo altamente capacitado y el uso de materias primas
+                        de
+                        alta calidad nos permiten ofrecer un servicio superior, garantizando los más altos estándares
+                        de
+                        calidad.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Ante cualquier duda y/o consulta no dude en contactarnos.</b>
+                    </h5>
+                </div>
             </div>
-            <!-- Fin Imagen Principal -->
-
-            <h2 class="centrado mrt30">Trabajamos con diseño propio y Garantía Escrita</h2>
+            <!-- Fin Presentación -->
 
             <div class="centrado mrt30">
                 <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
                         alt="whatsapp"><b>CONTACTANOS</b></a>
             </div>
 
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify"><b>LFConstrucciones</b>, es una empresa en constante crecimiento,
-                    ofreciendo una amplia gama de servicios en el sector de la construcción y sus derivados. Nuestro
-                    equipo de profesionales altamente capacitados y experimentados está preparado para abordar cualquier
-                    situación con respuestas rápidas y eficientes.</h4>
-            </div>
-            <!-- Fin Presentación -->
+            <div class="container mrt30">
 
-            <div class="contenedor-cards">
-                <div class="centrado cards">
-                    <div class="" id="tejas">
-                        <div class="mr10">
+                <!-- Cards -->
+                <div class="contenedor-cards">
+                    <div class="centrado cards">
+                        <div class="mr10" id="tejas">
                             <img class="img-tarjetas mrt10" src="/img/techos/teja.png" alt="teja">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
-                    </div>
-                    <div class="" id="chapa">
-                        <div class="mr10">
+                        <div class="mr10" id="chapa">
                             <img class="img-tarjetas mrt10" src="/img/techos/chapa.png" alt="chapa">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
                 </div>
+                <!-- Fin Cards -->
+
+                <div class="centrado mrt30">
+                    <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
+                            alt="whatsapp"><b>PEDIR
+                            PRESUPUESTO</b></a>
+                </div>
+
+                <div class="presentacion mrt30">
+                    <h5 class="text-indent justify">Nos especializamos en hacer realidad tus proyectos de herrería,
+                        brindándote soluciones integrales y de calidad.</h5>
+                    <br>
+                    <h5 class="text-indent justify"><b>Solicite presupuesto Sin Cargo.</b> Estamos para ayudarlo con
+                        cualquier duda y/o consulta que tenga.</h5>
+                </div>
+
             </div>
-
-            <!-- Fin Cards -->
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">En <b>LFConstrucciones</b>, realizamos servicios para empresas y
-                    particulares. Estamos capacitados para brindar soluciones eficaces y de alta calidad. Años de
-                    experiencia nos avalan. </h4>
-            </div>
-
-            <div class="presentacion mrt30">
-                <h5 class="text-indent justify">Trabajamos con diseño propio y <b>Garantía Escrita.</b> Solicité
-                    presupuesto <b>Sin Cargo.</b> Estamos para ayudarlo con cualquier duda y/o consulta que tenga.</h4>
-            </div>
-
         </div>
     </main>
 
